# robotics-sim-debugger

./: .gitignore  CMakeLists.txt  CMakeLists.txt   README.md
gui/: CMakeLists.txt  main.cpp
include/controller/: Breakpoint.hpp  BreakpointManager.hpp  EngineController.hpp  EventBasedBreakpoint.hpp  RobotModeBreakpoint.hpp  TickBreakpoint.hpp
include/core/: ConflictResolver.hpp  GridConfig.hpp  SimulationEngine.hpp  SimulationState.hpp  SnapshotManager.hpp
include/planners/: AStarPlanner.hpp  BFSPlanner.hpp  DijkstraPlanner.hpp  GraphSearchPlanner.hpp  Planner.hpp  UniversalPlanner.hpp
include/robots/: GridRobot.hpp  Robot.hpp  RobotMode.hpp
include/sensors/: GoalSensor.hpp  ObstacleSensor.hpp  Sensor.hpp
include/ui/console/: ConsoleRenderer.hpp
include/ui/debug/: DebugSnapshotView.hpp
src/: main.cpp
src/controller/: BreakpointManager.cpp  EngineController.cpp  EventBasedBreakpoint.cpp  RobotModeBreakpoint.cpp  TickBreakpoint.cpp
src/core/: ConflictResolver.cpp  SimulationEngine.cpp  SnapshotManager.cpp
src/planners/: AStarPlanner.cpp  BFSPlanner.cpp  DijkstraPlanner.cpp  GraphSearchPlanner.cpp  Planner.cpp  UniversalPlanner.cpp
src/robots/: GridRobot.cpp  Robot.cpp
src/sensors/: GoalSensor.cpp  ObstacleSensor.cpp
src/ui/console/: ConsoleRenderer.cpp
tests/: CMakeLists.txt  test_astar.cpp  test_bfs.cpp  test_breakpoints.cpp  test_conflict_resolver.cpp  test_controller.cpp  test_dijkstra.cpp  test_snapshots.cpp
